test: build the GameTest harness and convert BotSpawnTest
14 in-world tests now pass under runGameTestServer (exit 0). Combined with 43
JUnit tests, in-world behaviour is finally verified automatically rather than by
hand over RCON.

Harness: a dedicated gametest source set bound to the tplus mod id, so the
framework's annotation scan finds it, with testframework on localRuntime rather
than implementation. Verified the release jar contains 16 class/config entries
and zero gametest or testframework leakage. TplusTestFramework self-registers
via @EventBusSubscriber because main cannot see the gametest source set.

The tests immediately paid for themselves by finding four things:

1. Spec risk 1 is settled, and the answer is that the path is impossible.
   NeoForge changed PlayerList.getPlayers() to return an unmodifiable view on
   purpose - "Neo: Return an unmodifiable view, we don't want people removing
   things without us knowing" - so getPlayers().add(bot) throws. BotFactory now
   rejects the path with an explanation, the playerlist subcommand is gone, and a
   GameTest pins the constraint so it fails loudly if that changes. Doing it
   properly needs PlayerList.placeNewPlayer; deferred to Plan B rather than
   bodged with an access transformer against an intentional guard.

2. The previous audit's shape change was a regression. A diagnostic GameTest
   measured collision vs outline shapes: eleven blocks have an empty collision
   shape but a solid outline - grass, flowers, torches, rails, pressure plates,
   cobwebs - and only vines and snow layers are standable upstream. Keying off
   the outline made a bot treat a poppy as ground. Reverted to collision shape,
   with a test that pins it. The ladder justification was also simply wrong:
   ladders have collision.

3. A carve-out for the two no-collision standables was written, then removed as
   unreachable - an entity cannot rest on a block with no collision, so it lands
   on whatever is beneath and the no-co